# public-showcase

./: .gitignore  LICENSE  README.md
.github/workflows/: netflix-recommender-system.yaml
machine-learning-microservice/: README.md  pyproject.toml
netflix-recommender-system/: .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  pyproject.toml  toto.ipynb
netflix-recommender-system-microservice/: README.md  pyproject.toml
netflix-recommender-system-microservice/netflix-recommender-system-microservice/: supervised_learning.py
netflix-recommender-system-microservice/notebooks/: 01. Sampling.ipynb
netflix-recommender-system/data/: data_sample.csv
netflix-recommender-system/models/1744574035/: model.pickle  summary.yaml
netflix-recommender-system/models/1744617999/: training_dataset_features.csv
netflix-recommender-system/netflix_recommender_system/: config.py  logger.py  model.py  predict.py  preprocessing.py  server.py  train.py
netflix-recommender-system/notebooks/: 01. Sampling.ipynb  Untitled-1.ipynb
netflix-recommender-system/tests/: conftest.py  test_unit.py
netflix-recommender-system/tests/snapshots/test_unit/test_compute_features/: column_features
