[tool.poetry]
name = "machine-learning-microservice"
version = "0.1.0"
description = "A basic machine learning microservice for a recommendation task"
authors = ["aremaoun"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
numpy = "^2.0"
scikit-learn = "^1.6.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
pylint = "^3.3.6"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
